--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,13 +14,16 @@ services:
 
   web:
     build: .
-    command: python manage.py runserver 0.0.0.0:8000
+    command: >
+      sh -c "python manage.py migrate &&
+             python manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/app
     ports:
       - "8000:8000"
     depends_on:
       - db
+    restart: unless-stopped
     environment:
       DEBUG: "1"
       SECRET_KEY: "replace-me"
